# dj-capybara

./: Cargo.toml  Dockerfile  Justfile  Makefile  README.md  build.rs  docker-compose.yml  purge_guild_commands.sh
.github/workflows/: build.yml  deploy.yml
src/: config.rs  constants.rs  main.rs
src/commands/: mod.rs  playback.rs  queue.rs  utils.rs
src/commands/cmd/: capybara.rs  cmd-base.template  eval.rs  info.rs  join.rs  leave.rs  me.rs  mod.rs  pause.rs  play.rs  queue.rs  resume.rs  seek.rs  skip.rs  status.rs  stop.rs
