[package]
name = "capybara"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.9", default-features = false, features = ["client", "cache", "gateway", "rustls_backend", "model", "voice", "unstable_discord_api"] }
songbird = { version = "0.2.0", features = ["builtin-queue"] }
dotenv = "0.15.0"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.2"
chrono = "0.4.19"
regex = "1.5.4"
evalexpr = "6.6.0"