[package]
name = "capybara"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
  "cache", 
  "client", 
  "collector",
  "gateway", 
  "model", 
  "rustls_backend", 
  "voice"
]

[dependencies]
songbird = { git = "https://github.com/kareigu/songbird", features = ["builtin-queue", "yt-dlp"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.19"
regex = "1.6"
evalexpr = "8.1"