[package]
name = "capybara"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.12"
default-features = false
features = [
  "cache",
  "client",
  "collector",
  "gateway",
  "model",
  "rustls_backend",
  "voice",
  "builder",
]

[dependencies.symphonia]
version = "0.5"
features = ["all"]

[dependencies]
songbird = { git = "https://github.com/serenity-rs/songbird", features = [
  "builtin-queue",
] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.19"
regex = "1.6"
evalexpr = "8.1"
reqwest = "0.11"
